@@ -48,6 +48,8 @@ public class GoogleMapsClient {
      * 장소 이름과 주소로 Google Place ID 조회 (Text Search v1)
      */
     public Optional<String> findPlaceId(String name, String address) {
+        log.info("Google Place ID 조회 시작: name={}", name);
+
         if (!properties.hasKey()) {
             return Optional.empty();
         }
@@ -67,9 +69,9 @@ public class GoogleMapsClient {
                     .retrieve()
                     .bodyToMono(GooglePlaceSearchResponse.class)
                     .block();
-
+            log.info("Google Place ID 조회 완료: name={}", name);
             if (response != null && response.places() != null && !response.places().isEmpty()) {
-                return Optional.ofNullable(response.places().get(0).id());
+                return Optional.ofNullable(response.places().getFirst().id());
             }
         } catch (Exception e) {
             log.error("Google Place ID 조회 실패 (v1): name={}, address={}", name, address, e);
@@ -82,12 +84,13 @@ public class GoogleMapsClient {
      * Place ID로 장소 상세 정보 조회 (Place Details v1)
      */
     public Optional<GooglePlaceDetailsResponse> getPlaceDetails(String placeId) {
+        log.info("Google Place 상세 정보 조회 시작: placeId={}", placeId);
         if (!properties.hasKey()) {
             return Optional.empty();
         }
 
         try {
-            return webClient.get()
+            Optional<GooglePlaceDetailsResponse> placeDetails = webClient.get()
                     .uri("/v1/places/{placeId}", placeId)
                     .header("X-Goog-FieldMask", "id,displayName,regularOpeningHours,photos,rating")
                     .header("Accept-Language", "ko")
@@ -95,8 +98,10 @@ public class GoogleMapsClient {
                     .bodyToMono(GooglePlaceDetailsResponse.class)
                     .map(Optional::ofNullable)
                     .block();
+            log.info("Google Place 상세 정보 조회 완료: placeId={}", placeId);
+            return placeDetails;
         } catch (Exception e) {
-            log.error("Google Place 상세 정보 조회 실패 (v1): placeId={}", placeId, e);
+            log.error("Google Place 상세 정보 조회 실패: placeId={}", placeId, e);
         }
 
         return Optional.empty();
@@ -106,12 +111,15 @@ public class GoogleMapsClient {
      * Photo Resource Name으로 이미지 URL 생성 (Place Media v1)
      */
     public String getPhotoUrl(String photoName, int maxWidth, int maxHeight) {
-        return UriComponentsBuilder.fromUriString(properties.getBaseUrl())
+        log.info("Google Place 사진 URL 생성 시작");
+        String url = UriComponentsBuilder.fromUriString(properties.getBaseUrl())
                 .path("/v1/{photoName}/media")
                 .queryParam("maxWidthPx", maxWidth)
                 .queryParam("maxHeightPx", maxHeight)
                 .queryParam("key", properties.getKey())
                 .buildAndExpand(photoName)
                 .toUriString();
+        log.info("Google Place 사진 URL 생성 완료");
+        return url;
     }
 }
